docker-registry 설치 디렉토리를 /data/docker-registry 로 변경

--- a/3.Docker Registry 설치 (로컬).md
+++ b/3.Docker Registry 설치 (로컬).md
@@ -4,8 +4,9 @@
 
 ```bash
 # 1. Registry 데이터 저장 디렉토리 생성
-mkdir -p ~/docker-registry/{data,auth,certs}
-cd ~/docker-registry
+sudo mkdir -p /data/docker-registry/{data,auth,certs}
+sudo chown -R $USER:$USER /data/docker-registry
+cd /data/docker-registry
 # 2. 디렉토리 확인
 ls -la
 ```
@@ -73,9 +74,9 @@ writing new private key to 'certs/domain.key'
 docker run -d \
   --restart=always \
   --name registry \
-  -v ~/docker-registry/data:/var/lib/registry \
-  -v ~/docker-registry/auth:/auth \
-  -v ~/docker-registry/certs:/certs \
+  -v /data/docker-registry/data:/var/lib/registry \
+  -v /data/docker-registry/auth:/auth \
+  -v /data/docker-registry/certs:/certs \
   -e REGISTRY_HTTP_ADDR=0.0.0.0:5000 \
   -e REGISTRY_HTTP_TLS_CERTIFICATE=/certs/domain.crt \
   -e REGISTRY_HTTP_TLS_KEY=/certs/domain.key \
@@ -104,9 +105,9 @@ echo "서버 IP: $SERVER_IP"
 # 2. Docker용 인증서 디렉토리 생성
 sudo mkdir -p /etc/docker/certs.d/$SERVER_IP:5000
 # 3. 인증서 복사
-sudo cp ~/docker-registry/certs/domain.crt /etc/docker/certs.d/$SERVER_IP:5000/ca.crt
+sudo cp /data/docker-registry/certs/domain.crt /etc/docker/certs.d/$SERVER_IP:5000/ca.crt
 # 4. 시스템 CA 저장소에도 추가
-sudo cp ~/docker-registry/certs/domain.crt /etc/pki/ca-trust/source/anchors/registry-ca.crt
+sudo cp /data/docker-registry/certs/domain.crt /etc/pki/ca-trust/source/anchors/registry-ca.crt
 sudo update-ca-trust
 # 5. Docker 재시작
 sudo systemctl restart docker
@@ -170,7 +171,7 @@ minikube stop
 minikube start --insecure-registry="$SERVER_IP:5000"
 # 3. Minikube 내부에 인증서 복사
 minikube ssh "sudo mkdir -p /etc/docker/certs.d/$SERVER_IP:5000"
-cat ~/docker-registry/certs/domain.crt | minikube ssh "sudo tee /etc/docker/certs.d/$SERVER_IP:5000/ca.crt"
+cat /data/docker-registry/certs/domain.crt | minikube ssh "sudo tee /etc/docker/certs.d/$SERVER_IP:5000/ca.crt"
 # 4. Minikube 재시작
 minikube stop
 minikube start --insecure-registry="$SERVER_IP:5000"
