레지스트리 TLS 인증서를 SAN 포함으로 재발급

--- a/3.Docker Registry 설치 (로컬).md
+++ b/3.Docker Registry 설치 (로컬).md
@@ -47,11 +47,12 @@ admin:$2y$05$xxxxxxxxxxxxxxxxxxxx
 # 1. 서버의 IP 주소 확인
 SERVER_IP=$(hostname -I | awk '{print $1}')
 echo "서버 IP: $SERVER_IP"
-# 2. 자체 서명 인증서 생성
+# 2. SAN 포함 자체 서명 인증서 재발급
 openssl req -newkey rsa:4096 -nodes -sha256 \
   -keyout certs/domain.key -x509 -days 365 \
   -out certs/domain.crt \
-  -subj "/C=KR/ST=Seoul/L=Seoul/O=MyCompany/CN=$SERVER_IP"
+  -subj "/C=KR/ST=Seoul/L=Seoul/O=MyCompany/CN=$SERVER_IP" \
+  -addext "subjectAltName=IP:$SERVER_IP,DNS:localhost"
 # 3. 인증서 확인
 ls -lh certs/
 ```
