Jenkins, Argocd, GilLab 내용 추가

--- a/kubeadm/01.kubeadm-rocky-single-node-containerd.md
+++ b/kubeadm/01.kubeadm-rocky-single-node-containerd.md
@@ -169,6 +169,15 @@ Kubernetes v1.35.x
 ## 4단계: kubeadm으로 클러스터 초기화 (단일 노드)
 
 ### 4-1. control-plane 노드 초기화
+
+**기준 네트워크 환경 (호스트)**  
+- IP 주소: 172.16.0.\*  
+- 서브넷마스크: 255.255.0.0 (/16)  
+- 게이트웨이: 172.16.200.254  
+- 기본 DNS: 168.126.63.1  
+
+호스트 대역이 172.16.0.0/16이므로 Pod 네트워크는 겹치지 않는 `10.244.0.0/16`(Flannel 기본)을 사용합니다.
+
 ```bash
 # containerd CRI 소켓 지정하여 초기화
 sudo kubeadm init \
