--- a/kubeadm/02.jenkins-build.md
+++ b/kubeadm/02.jenkins-build.md
@@ -38,7 +38,57 @@ Jenkins용 PVC를 사용하려면 기본 StorageClass가 있거나, 수동으로
 kubectl get storageclass
 ```
 
-**예상:** `default` 표시가 있는 StorageClass가 있으면 PVC가 자동 바인딩됩니다. 없으면 01번 문서의 클러스터에 따라 로컬 프로비저너 또는 NFS 등을 별도 구성합니다.
+**예상:** `default` 표시가 있는 StorageClass가 있으면 PVC가 자동 바인딩됩니다.
+
+**`No resources found`인 경우:** 아래 중 하나로 StorageClass를 구성한 뒤 Jenkins PVC 단계를 진행합니다.
+
+#### (A) local-path-provisioner 설치 (단일 노드 권장)
+노드 로컬 디스크에 볼륨을 자동 생성합니다. 01번 문서의 단일 노드 클러스터에 적합합니다.
+
+```bash
+# Rancher local-path-provisioner 배포 (기본 저장 경로: /opt/local-path-provisioner)
+kubectl apply -f https://raw.githubusercontent.com/rancher/local-path-provisioner/v0.0.28/deploy/local-path-storage.yaml
+
+# default StorageClass로 지정 (선택)
+kubectl patch storageclass local-path -p '{"metadata": {"annotations":{"storageclass.kubernetes.io/is-default-class":"true"}}}'
+
+# 확인
+kubectl get storageclass
+kubectl get pods -n local-path-storage
+```
+
+**예상:** `local-path` StorageClass가 보이고, `local-path-storage` 네임스페이스의 Pod가 `Running`이면 PVC가 자동으로 바인딩됩니다.
+
+#### (B) 수동 PV/PVC (StorageClass 없이)
+StorageClass를 쓰지 않고, 미리 만든 PV에 PVC를 바인딩하는 방식입니다. 1-2의 PVC YAML에 `storageClassName: ""`를 넣고, 아래처럼 PV를 하나 만든 뒤 사용합니다.
+
+```yaml
+# jenkins-pv.yaml (노드 경로는 실제 존재하는 디렉터리로 변경)
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: jenkins-pv
+spec:
+  capacity:
+    storage: 10Gi
+  accessModes:
+    - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: ""
+  hostPath:
+    path: /data/jenkins
+    type: DirectoryOrCreate
+```
+
+```bash
+# 노드에 디렉터리 생성 (Jenkins가 배포될 노드에서)
+sudo mkdir -p /data/jenkins
+sudo chown 1000:1000 /data/jenkins
+
+kubectl apply -f jenkins-pv.yaml
+```
+
+1-2의 PVC에는 `storageClassName: ""`를 추가하고, `volumeName: jenkins-pv`를 지정하면 해당 PV에 바인딩됩니다.
 
 ---
 
