--- a/kubeadm/02.jenkins-build.md
+++ b/kubeadm/02.jenkins-build.md
@@ -88,6 +88,8 @@ sudo chown 1000:1000 /data/jenkins
 kubectl apply -f jenkins-pv.yaml
 ```
 
+> **파일 위치:** `jenkins-pv.yaml`은 어디에 두어도 됩니다. `kubectl`을 실행하는 쪽에서 경로만 맞으면 됩니다. 예: Jenkins 매니페스트를 한 폴더에 모을 경우 `~/k8s-jenkins/jenkins-pv.yaml`에 저장한 뒤 해당 디렉터리에서 `kubectl apply -f jenkins-pv.yaml` 실행, 또는 `kubectl apply -f ~/k8s-jenkins/jenkins-pv.yaml` 처럼 전체 경로로 지정합니다.
+
 1-2의 PVC에는 `storageClassName: ""`를 추가하고, `volumeName: jenkins-pv`를 지정하면 해당 PV에 바인딩됩니다.
 
 ---
@@ -153,7 +155,7 @@ spec:
             - containerPort: 50000
           env:
             - name: JAVA_OPTS
-              value: "-Djenkins.install.runSetupWizard=false -Xmx1024m"
+              value: "-Djenkins.install.runSetupWizard=true -Xmx1024m"
           volumeMounts:
             - name: jenkins-home
               mountPath: /var/jenkins_home
@@ -192,6 +194,26 @@ spec:
 kubectl apply -f jenkins-deployment.yaml
 ```
 
+**jenkins-deployment.yaml 수정 후 적용 방법**
+
+1. 파일 수정 후 저장
+2. 매니페스트 적용 (Deployment 변경 시 롤링 업데이트됨)
+
+```bash
+# jenkins-deployment.yaml이 있는 디렉터리에서
+kubectl apply -f jenkins-deployment.yaml
+
+# 적용 상태 확인 (새 Pod가 기동될 때까지 대기)
+kubectl rollout status deployment/jenkins -n jenkins
+```
+
+변경이 Pod에 반영되지 않을 때는 수동으로 재시작할 수 있습니다.
+
+```bash
+kubectl rollout restart deployment/jenkins -n jenkins
+kubectl rollout status deployment/jenkins -n jenkins
+```
+
 ### 2-2. Jenkins 기동 대기
 ```bash
 kubectl rollout status deployment/jenkins -n jenkins
@@ -200,10 +222,27 @@ kubectl get pods -n jenkins
 
 **예상:** Pod가 `Running`이 되면 브라우저에서 `http://<노드IP>:30080`으로 접속합니다.
 
-### 2-3. 초기 비밀번호 확인
+**노드 IP 확인 방법**
+
 ```bash
+# 클러스터 노드와 내부 IP 확인 (INTERNAL-IP 열 참고)
+kubectl get nodes -o wide
+```
+
+단일 노드라면 출력된 노드의 `INTERNAL-IP`(예: 172.16.0.10)가 접속할 주소입니다. 해당 노드 서버에서 브라우저를 쓴다면 `http://localhost:30080` 또는 `http://127.0.0.1:30080`으로도 접속할 수 있습니다.
+
+### 2-3. 초기 비밀번호 확인
+Jenkins가 완전히 기동한 뒤에만 `initialAdminPassword` 파일이 생성됩니다. Pod가 `Running`이어도 내부 초기화에는 1~2분 걸릴 수 있으므로, **파일이 없다고 나오면 1~2분 기다린 뒤 다시 시도**하거나, 로그에서 기동 완료 메시지를 확인합니다.
+
+```bash
+# 기동 완료 여부 확인 (로그에 "Jenkins is fully up and running" 등이 보이면 시도)
+kubectl logs -n jenkins deployment/jenkins -f
+# Ctrl+C로 중단 후 아래 실행
+
 kubectl exec -n jenkins deployment/jenkins -- cat /var/jenkins_home/secrets/initialAdminPassword
 ```
+
+> **`runSetupWizard=false`인 경우:** 설정 마법사를 끄면 초기 비밀번호 화면이 없을 수 있어 위 파일이 생성되지 않을 수 있습니다. 최초 1회는 `runSetupWizard=true`로 두고 관리자 계정을 만든 뒤, 필요 시 `false`로 변경합니다.
 
 ### 2-4. 설치 검증
 ```bash
