보안설정추가

--- a/kubeadm/02.jenkins-build.md
+++ b/kubeadm/02.jenkins-build.md
@@ -284,6 +284,22 @@ kubectl exec -n jenkins svc/jenkins -c jenkins -- cat /var/jenkins_home/secrets/
 
 ## 3단계: Jenkins 기본 설정
 
+### 3-0. 보안 설정 (권장)
+
+비밀번호 없이 접속되는 경우, 아직 보안이 꺼져 있거나 설정 마법사가 건너뛰어진 상태입니다. 운영 환경에서는 반드시 인증을 설정하는 것이 좋습니다.
+
+1. **관리자 계정 생성·설정**
+   - **Manage Jenkins** → **Security** → **Configure Global Security**
+   - **Security Realm**: "Jenkins' own user database" 선택 후 **Save**
+   - **Manage Jenkins** → **Users**에서 기존 사용자(예: admin) 비밀번호 설정 또는 새 사용자 추가
+
+2. **로그인 필수로 변경**
+   - **Configure Global Security** → **Authorization**
+   - "Logged-in users can do anything" 또는 "Matrix-based security" 등으로 설정해, 익명 접근을 막고 로그인한 사용자만 사용하도록 지정
+
+3. **(선택) 설정 마법사로 처음부터 설정**
+   - `jenkins-deployment.yaml`에서 `JAVA_OPTS`의 `runSetupWizard=true`로 두고 재배포하면, 다음 기동 시 초기 잠금 해제 화면과 설정 마법사가 표시됩니다. 여기서 관리자 계정 생성 및 보안 설정을 진행할 수 있습니다.
+
 ### 3-1. 필수 플러그인
 - **Pipeline**, **Git**, **Kubernetes**, **Docker Pipeline**, **Credentials** 등 설치
 - Manage Jenkins → Plugins → Available에서 검색 후 설치
