파일 순번 및 명칭변경

--- a/kubeadm/03.argocd-deploy.md
+++ b/kubeadm/03.argocd-deploy.md
@@ -56,28 +56,54 @@ kubectl get svc -n argocd
 **예상:** `argocd-application-controller`, `argocd-server`, `argocd-redis` 등 Pod가 모두 `Running`입니다.
 
 ### 1-4. Argo CD CLI 설치 (선택)
+
+#### Linux 아키텍처 확인 (linux-amd64 / x86_64)
 ```bash
-# Linux (amd64)
+# 방법 1: uname (가장 일반적)
+uname -m
+# x86_64 → amd64 바이너리 사용 (argocd-linux-amd64)
+# aarch64, arm64 → argocd-linux-arm64 사용
+# i686, i386 → 32비트; Argo CD는 공식 64비트만 제공
+
+# 방법 2: arch 명령
+arch
+# x86_64 이면 amd64
+
+# 방법 3: Debian/Ubuntu 계열
+dpkg --print-architecture
+# amd64 이면 argocd-linux-amd64 사용
+```
+
+**정리:** `uname -m` 결과가 **x86_64**이면 **linux-amd64** 아키텍처이므로 아래 "Linux (x86_64/amd64)" 절차를 따릅니다.
+
+#### Linux (x86_64/amd64) CLI 설치
+`uname -m`이 `x86_64`인 경우:
+```bash
 curl -sSL -o argocd https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
 chmod +x argocd
 sudo mv argocd /usr/local/bin/
+argocd version --client
+```
+
+#### 기타 환경
+```bash
+# Linux (arm64, uname -m 이 aarch64인 경우)
+# curl -sSL -o argocd https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-arm64
 
 # Windows (PowerShell, 관리자 권한 시)
 # https://github.com/argoproj/argo-cd/releases 에서 argocd-windows-amd64.exe 다운로드 후 PATH에 추가
 
-# macOS (Intel)
+# macOS (Intel, x86_64)
 curl -sSL -o argocd https://github.com/argoproj/argo-cd/releases/latest/download/argocd-darwin-amd64
 chmod +x argocd
 sudo mv argocd /usr/local/bin/
 
-# macOS (Apple Silicon)
+# macOS (Apple Silicon, arm64)
 curl -sSL -o argocd https://github.com/argoproj/argo-cd/releases/latest/download/argocd-darwin-arm64
 chmod +x argocd
 sudo mv argocd /usr/local/bin/
-
-# 버전 확인
-argocd version --client
 ```
+CLI 설치 후 버전 확인: `argocd version --client`
 
 ---
 
