--- a/kubeadm/02.docker-registry.md
+++ b/kubeadm/02.docker-registry.md
@@ -143,6 +143,42 @@ docker run -d \
   registry:2
 ```
 
+### 5-1-2. (선택) Compose로 실행
+
+동일한 구성을 Compose로 실행하려면 프로젝트 디렉터리에 `docker-compose.yml`을 만들고 실행합니다.
+
+**파일 생성:** `/data/docker-registry/docker-compose.yml`
+
+```yaml
+services:
+  registry:
+    image: registry:2
+    container_name: registry
+    restart: always
+    ports:
+      - "5000:5000"
+    volumes:
+      - /data/docker-registry/data:/var/lib/registry
+      - /data/docker-registry/auth:/auth
+      - /data/docker-registry/certs:/certs
+    environment:
+      REGISTRY_HTTP_ADDR: 0.0.0.0:5000
+      REGISTRY_HTTP_TLS_CERTIFICATE: /certs/domain.crt
+      REGISTRY_HTTP_TLS_KEY: /certs/domain.key
+      REGISTRY_AUTH: htpasswd
+      REGISTRY_AUTH_HTPASSWD_PATH: /auth/htpasswd
+      REGISTRY_AUTH_HTPASSWD_REALM: "Registry Realm"
+```
+
+**실행:**
+
+```bash
+cd /data/docker-registry
+docker compose up -d
+```
+
+**중지/제거:** `docker compose down` (볼륨 데이터는 호스트 경로에 남습니다.)
+
 ### 5-2. 실행 확인
 ```bash
 docker ps | grep registry
