--- a/kubeadm/02.docker-registry.md
+++ b/kubeadm/02.docker-registry.md
@@ -31,6 +31,18 @@ docker --version 2>/dev/null || echo "Docker 미설치"
 
 **Docker가 없는 경우** 아래 "0단계: Docker CE 설치"를 먼저 진행합니다.
 
+**`permission denied` (Docker 소켓 접근 거부)** 가 나오면, 현재 사용자를 `docker` 그룹에 넣은 뒤 세션을 다시 열어야 합니다.
+
+```bash
+# 현재 사용자를 docker 그룹에 추가
+sudo usermod -aG docker $USER
+
+# 적용을 위해 로그아웃 후 다시 로그인하거나, 현재 셸에서 그룹 적용
+newgrp docker
+```
+
+이후 `docker ps` 등이 sudo 없이 동작하는지 확인합니다. (Compose로 Registry 실행 시에도 동일하게 적용됩니다.)
+
 ---
 
 ## 0단계: Docker CE 설치 (Registry 서버에 Docker가 없을 때)
