--- a/kubeadm/06.manual.md
+++ b/kubeadm/06.manual.md
@@ -14,6 +14,7 @@
 | 04 | 04.jenkins-build.md | Jenkins CI 빌드 (파이프라인, 이미지 빌드·푸시) |
 | 05 | 05.argocd-deploy.md | Argo CD CD 배포 (Git 기반 배포·동기화) |
 | 06 | 06.manual.md | 종합 메뉴얼 (본 문서) |
+| 07 | 07.tomcat-war-deploy.md | Tomcat + WAR Kubernetes 배포 (이미지 빌드·Deployment·Service) |
 
 ---
 
@@ -29,6 +30,7 @@
 | Jenkins | 04: Deployment+YAML 또는 Helm | `kubectl get pods -n jenkins`, http://\<노드IP\>:30080 |
 | Argo CD | 05: manifest install.yaml | `kubectl get pods -n argocd`, Argo CD UI |
 | Argo CD CLI | 05: 1-4절 (Linux/Windows/macOS) | `argocd version --client` |
+| Tomcat WAR 앱 | 07: Dockerfile + Deployment/Service | `kubectl get pods -n dev` |
 
 ---
 
