--- a/kubeadm/07.tomcat-war-deploy.md
+++ b/kubeadm/07.tomcat-war-deploy.md
@@ -40,8 +40,8 @@ docker login $SERVER_IP:5000
 배포할 WAR 파일을 넣을 디렉터리를 만들고, WAR를 복사합니다. (Jenkins에서 빌드한 경우 해당 경로에서 복사하거나, 빌드 산출물 경로를 아래 경로로 맞춥니다.)
 
 ```bash
-# 예: 애플리케이션명 myapp
-APP_NAME=myapp
+# 예: 애플리케이션명 h-cms
+APP_NAME=h-cms
 mkdir -p ~/tomcat-war-deploy/$APP_NAME
 cd ~/tomcat-war-deploy/$APP_NAME
 
@@ -73,7 +73,7 @@ EXPOSE 8080
 ```
 
 - **Jakarta EE 9+ / Servlet 5+ WAR**인 경우 첫 줄을 `FROM tomcat:10.1-jre17` 등으로 변경합니다.
-- **컨텍스트 경로**를 `/myapp`처럼 쓰려면 `COPY app.war /usr/local/tomcat/webapps/myapp.war` 로 두고, 서비스 접근 시 `/myapp`으로 호출하면 됩니다.
+- **컨텍스트 경로**를 `/h-cms`처럼 쓰려면 `COPY app.war /usr/local/tomcat/webapps/h-cms.war` 로 두고, 서비스 접근 시 `/h-cms`으로 호출하면 됩니다.
 
 ---
 
@@ -121,31 +121,31 @@ kubectl create secret docker-registry registry-secret \
 
 **파일:** `~/tomcat-war-deploy/$APP_NAME/deployment.yaml`
 
-아래는 `APP_NAME=myapp`, `IMAGE`가 `$SERVER_IP:5000/myapp:latest`라고 가정한 예시입니다. `NAMESPACE=dev`를 사용합니다.
+아래는 `APP_NAME=h-cms`, `IMAGE`가 `$SERVER_IP:5000/h-cms:latest`라고 가정한 예시입니다. `NAMESPACE=dev`를 사용합니다.
 
 ```yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: myapp
+  name: h-cms
   namespace: dev
   labels:
-    app: myapp
+    app: h-cms
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: myapp
+      app: h-cms
   template:
     metadata:
       labels:
-        app: myapp
+        app: h-cms
     spec:
       imagePullSecrets:
         - name: registry-secret
       containers:
         - name: tomcat
-          image: "<REGISTRY_IP>:5000/myapp:latest"
+          image: "<REGISTRY_IP>:5000/h-cms:latest"
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
@@ -172,31 +172,32 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: myapp
+  name: h-cms
   namespace: dev
 spec:
   selector:
-    app: myapp
+    app: h-cms
   ports:
     - port: 80
       targetPort: 8080
   type: ClusterIP
 ```
 
-**적용 전:** `image`의 `<REGISTRY_IP>`를 실제 Registry 주소(예: 노드 IP)로 바꿉니다.
+**적용 전:** `image`의 `<REGISTRY_IP>`를 **실제 IP 또는 호스트명**으로 반드시 바꿉니다. 그대로 두면 `InvalidImageName`이 발생합니다.
 
 ```bash
-# 변수로 치환하여 적용하는 예
+# 변수로 치환하여 적용하는 예 (동일 셸에서 SERVER_IP 설정 후 실행)
+SERVER_IP=$(hostname -I | awk '{print $1}')
 sed "s/<REGISTRY_IP>/$SERVER_IP/g" deployment.yaml | kubectl apply -f -
 ```
 
-또는 편집기로 `image` 값을 `$SERVER_IP:5000/myapp:latest` 형태로 수정한 뒤:
+또는 편집기로 `image` 값을 `192.168.x.x:5000/h-cms:latest` 형태로 수정한 뒤:
 
 ```bash
 kubectl apply -f deployment.yaml
 ```
 
-**예상:** `deployment.apps/myapp created`, `service/myapp created`
+**예상:** `deployment.apps/h-cms created`, `service/h-cms created`
 
 ---
 
@@ -204,27 +205,27 @@ kubectl apply -f deployment.yaml
 
 ### Pod·Service 상태
 ```bash
-kubectl get pods -n dev -l app=myapp
-kubectl get svc -n dev myapp
+kubectl get pods -n dev -l app=h-cms
+kubectl get svc -n dev h-cms
 ```
 
 **예상:** Pod가 `Running`, Service가 `ClusterIP`로 생성됩니다.
 
 ### 로그 확인
 ```bash
-kubectl logs -n dev -l app=myapp --tail=50 -f
+kubectl logs -n dev -l app=h-cms --tail=50 -f
 ```
 
 ### 클러스터 내부에서 접근 테스트 (curl)
 ```bash
-kubectl run curl --rm -it --restart=Never --image=curlimages/curl -n dev -- curl -s -o /dev/null -w "%{http_code}" http://myapp.dev.svc.cluster.local:80/
+kubectl run curl --rm -it --restart=Never --image=curlimages/curl -n dev -- curl -s -o /dev/null -w "%{http_code}" http://h-cms.dev.svc.cluster.local:80/
 ```
 
 **예상:** `200` 등 정상 응답 코드.
 
 ### 노드에서 포트 포워드로 브라우저 접속 (선택)
 ```bash
-kubectl port-forward -n dev svc/myapp 8080:80
+kubectl port-forward -n dev svc/h-cms 8080:80
 ```
 이후 브라우저에서 `http://localhost:8080` 접속하여 WAR 애플리케이션 동작을 확인합니다.
 
@@ -239,19 +240,19 @@ kubectl port-forward -n dev svc/myapp 8080:80
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: myapp
+  name: h-cms
   namespace: dev
 spec:
   ingressClassName: nginx
   rules:
-    - host: myapp.example.com
+    - host: h-cms.example.com
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: myapp
+                name: h-cms
                 port:
                   number: 80
 ```
@@ -259,6 +260,62 @@ spec:
 ```bash
 kubectl apply -f ingress.yaml
 ```
+
+---
+
+## 트러블슈팅: InvalidImageName / ImagePullBackOff
+
+### InvalidImageName
+- **원인:** `image` 필드에 `<REGISTRY_IP>`가 그대로 들어가 있거나, 이미지 이름에 허용되지 않은 문자가 있는 경우.
+- **조치:**
+  1. 실제 사용할 이미지 이름 확인:
+     ```bash
+     SERVER_IP=$(hostname -I | awk '{print $1}')
+     echo $SERVER_IP:5000/h-cms:latest
+     ```
+  2. Deployment의 `image`를 위와 같은 형태로 수정 후 재적용:
+     ```bash
+     kubectl edit deployment h-cms -n dev
+     # image: 192.168.x.x:5000/h-cms:latest 처럼 실제 주소로 저장
+     ```
+  3. 또는 매니페스트에서 치환 후 적용:
+     ```bash
+     sed "s/<REGISTRY_IP>/$SERVER_IP/g" deployment.yaml | kubectl apply -f -
+     ```
+
+### ImagePullBackOff
+- **원인:** 이미지가 Registry에 없거나, Registry 주소/인증이 잘못된 경우.
+- **조치:**
+  1. 이미지가 Registry에 있는지 확인 (빌드한 머신에서):
+     ```bash
+     SERVER_IP=$(hostname -I | awk '{print $1}')
+     docker pull $SERVER_IP:5000/h-cms:latest
+     ```
+  2. 없으면 3단계에서 다시 빌드·푸시:
+     ```bash
+     cd ~/tomcat-war-deploy/h-cms
+     docker build -t $SERVER_IP:5000/h-cms:latest .
+     docker push $SERVER_IP:5000/h-cms:latest
+     ```
+  3. `dev` 네임스페이스에 `registry-secret`이 있는지 확인:
+     ```bash
+     kubectl get secret registry-secret -n dev
+     ```
+  4. 없거나 잘못됐으면 4단계대로 시크릿 재생성 후 Pod 재시작:
+     ```bash
+     kubectl delete secret registry-secret -n dev
+     kubectl create secret docker-registry registry-secret \
+       --docker-server=$SERVER_IP:5000 \
+       --docker-username=admin \
+       --docker-password=admin123 \
+       -n dev
+     kubectl delete pods -n dev -l app=h-cms
+     ```
+  5. 상세 원인 확인:
+     ```bash
+     kubectl describe pod -n dev -l app=h-cms
+     ```
+     `Events`의 `Failed` 메시지를 확인합니다.
 
 ---
 
