--- a/kubeadm/01.kubeadm-rocky-single-node-containerd.md
+++ b/kubeadm/01.kubeadm-rocky-single-node-containerd.md
@@ -115,7 +115,37 @@ sudo systemctl status containerd
 
 **예상:** `Active: active (running)`
 
-### 2-3. CRI 소켓 확인
+### 2-3. Private Registry용 CRI 플러그인 설정 (선택)
+
+02번 문서의 Private Docker Registry(HTTP 또는 self-signed HTTPS)에서 이미지를 pull할 경우, containerd에 해당 레지스트리 주소를 등록해야 합니다. 그렇지 않으면 `x509: certificate signed by unknown authority` 또는 HTTPS 접속 오류로 ImagePullBackOff가 발생할 수 있습니다.
+
+**파일:** `/etc/containerd/config.toml`  
+아래 블록을 **파일 맨 아래**에 추가합니다. `<REGISTRY_IP>`는 실제 레지스트리 주소(예: `172.16.0.194`)로 바꿉니다.
+
+```toml
+# Private Registry (HTTP 또는 self-signed TLS) — 02번 문서 Registry 사용 시
+[plugins."io.containerd.grpc.v1.cri".registry]
+  [plugins."io.containerd.grpc.v1.cri".registry.configs."<REGISTRY_IP>:5000"]
+    [plugins."io.containerd.grpc.v1.cri".registry.configs."<REGISTRY_IP>:5000".tls]
+      insecure_skip_verify = true
+```
+
+- **HTTP 전용** 레지스트리인 경우, endpoint를 명시하려면 아래도 함께 추가할 수 있습니다.
+  ```toml
+  [plugins."io.containerd.grpc.v1.cri".registry.mirrors."<REGISTRY_IP>:5000"]
+    endpoint = ["http://<REGISTRY_IP>:5000"]
+  ```
+
+추가 후 containerd와 kubelet을 재시작합니다.
+
+```bash
+sudo systemctl restart containerd
+sudo systemctl restart kubelet
+```
+
+> 적용 전에 `config.toml`에 이미 `[plugins."io.containerd.grpc.v1.cri".registry]` 섹션이 있으면, 그 안에 `configs."<REGISTRY_IP>:5000"` 블록만 병합합니다.
+
+### 2-4. CRI 소켓 확인
 ```bash
 ls -la /run/containerd/containerd.sock
 ```
