--- a/kubeadm/07.tomcat-war-deploy.md
+++ b/kubeadm/07.tomcat-war-deploy.md
@@ -319,6 +319,51 @@ kubectl apply -f ingress.yaml
 
 ---
 
+## 재배포 절차 (InvalidImageName / ImagePullBackOff 해결)
+
+Pod가 `InvalidImageName` 또는 `ImagePullBackOff`일 때 아래 순서로 재배포합니다.
+
+### 1. Registry IP 확인 및 이미지 주소 확인
+```bash
+SERVER_IP=$(hostname -I | awk '{print $1}')
+echo $SERVER_IP:5000/h-cms:latest
+```
+
+### 2. 이미지 재빌드 및 Registry 푸시
+```bash
+cd ~/tomcat-war-deploy/h-cms
+docker build -t $SERVER_IP:5000/h-cms:latest .
+docker push $SERVER_IP:5000/h-cms:latest
+```
+
+### 3. Deployment 이미지 주소 수정 후 재적용
+매니페스트의 `image`가 `<REGISTRY_IP>`로 되어 있으면 실제 IP로 바꾼 뒤 적용합니다.
+
+```bash
+cd ~/tomcat-war-deploy/h-cms
+sed "s/<REGISTRY_IP>/$SERVER_IP/g" deployment.yaml | kubectl apply -f -
+```
+
+또는 수동 수정 후:
+```bash
+kubectl apply -f deployment.yaml
+```
+
+### 4. 기존 Pod 삭제 후 새 Pod 생성 (재배포)
+```bash
+kubectl delete pods -n dev -l app=h-cms
+```
+
+### 5. 상태 확인
+```bash
+kubectl get pods -n dev -l app=h-cms
+```
+**예상:** 새 Pod가 생성되고 `Running` / `READY 1/1`로 전환됩니다.
+
+이후에도 실패하면 `kubectl describe pod -n dev -l app=h-cms`로 Events를 확인하고, 위 **트러블슈팅**의 ImagePullBackOff 조치(registry-secret 확인 등)를 진행합니다.
+
+---
+
 ## 요약
 
 | 단계 | 내용 |
