Jenkins에서 이미지 빌드하기 추가

--- a/kubeadm/07.tomcat-war-deploy.md
+++ b/kubeadm/07.tomcat-war-deploy.md
@@ -196,6 +196,109 @@ docker push $IMAGE
 
 ---
 
+## 3단계 (대안): 04번 Jenkins에서 이미지 빌드하기
+
+07번에서 사용하는 Tomcat+WAR 이미지를 **04번 문서의 Jenkins** 파이프라인에서 빌드·푸시하는 방법입니다. 소스에서 WAR 빌드 후 동일한 Dockerfile로 이미지를 만들어 Private Registry에 푸시합니다.
+
+### 사전 조건
+
+- 04번 문서 완료: Jenkins가 Kubernetes(또는 별도 서버)에 배포되어 있고, Pipeline·Docker Pipeline 플러그인 설치됨
+- 02번 문서 완료: Private Registry 동작 중 (예: `$SERVER_IP:5000`)
+- Jenkins에 Registry 인증 정보 등록: Manage Jenkins → Credentials → Username/Password (ID 예: `registry-credentials`)
+- 빌드할 애플리케이션 소스가 Git 등 SCM에 있고, Jenkins에서 해당 저장소 접근 가능
+
+### 저장소에 넣을 파일
+
+1. **Dockerfile** (07번 2단계와 동일)  
+   프로젝트 루트 또는 `docker/` 등 하위 디렉터리에 두고, **빌드 산출물 WAR를 `app.war`로 복사**하는 형태로 둡니다.
+
+   ```dockerfile
+   FROM tomcat:9-jdk8
+   COPY app.war /usr/local/tomcat/webapps/ROOT.war
+   EXPOSE 8080
+   ```
+
+2. **Jenkinsfile**  
+   아래 예시는 Maven으로 WAR 빌드 → `app.war`로 복사 → Docker 이미지 빌드 → Registry 푸시 순서입니다. Registry 주소·이미지 이름·Credentials ID는 환경에 맞게 수정합니다.
+
+### Jenkinsfile 예시 (Tomcat WAR → 이미지 빌드·푸시)
+
+Pipeline Job에서 **Pipeline script from SCM**으로 이 Jenkinsfile을 사용합니다. Script Path는 저장소 내 경로(예: `Jenkinsfile`)로 지정합니다.
+
+```groovy
+pipeline {
+  agent any
+  environment {
+    // 02번 Private Registry 주소 (예: 노드 IP:5000). Jenkins가 접근 가능한 IP/호스트명으로 설정
+    REGISTRY = '192.168.1.100:5000'
+    APP_NAME = 'h-cms'
+    IMAGE = "${REGISTRY}/${APP_NAME}:${env.BUILD_NUMBER}"
+    IMAGE_LATEST = "${REGISTRY}/${APP_NAME}:latest"
+  }
+  stages {
+    stage('Checkout') {
+      steps {
+        checkout scm
+      }
+    }
+    stage('Build WAR') {
+      steps {
+        sh 'mvn clean package -DskipTests'
+        // 산출물 경로는 프로젝트에 맞게 수정 (예: target/*.war)
+        sh 'cp target/*.war app.war'
+      }
+    }
+    stage('Docker Build & Push') {
+      steps {
+        script {
+          docker.build("${IMAGE}")
+          docker.withRegistry("https://${REGISTRY}", 'registry-credentials') {
+            docker.image("${IMAGE}").push()
+            docker.image("${IMAGE}").push('latest')
+          }
+        }
+      }
+    }
+  }
+  post {
+    always {
+      cleanWs()
+    }
+  }
+}
+```
+
+**수정 포인트:**
+
+- `REGISTRY`: 02번 문서의 Private Registry 주소 (예: `192.168.1.100:5000`). Jenkins Agent가 도달 가능한 IP/호스트명.
+- `APP_NAME`: 07번의 애플리케이션명(예: `h-cms`). 이미지 이름 및 배포 매니페스트의 `image`와 일치시키면 됨.
+- `target/*.war`: Maven 기본 경로. Gradle 등이면 `build/libs/*.war` 등으로 변경.
+- `registry-credentials`: Manage Jenkins → Credentials에 등록한 Registry Username/Password의 ID.
+
+**참고:** `https://` 없이 사용하는 Registry(일반적으로 사내 5000 포트)인 경우, Jenkins에 "Insecure Registry" 설정이 필요할 수 있습니다. Docker Pipeline이 호스트의 Docker를 쓰는 경우 해당 Docker 데몬의 `insecure-registries`에 `REGISTRY` 주소를 추가합니다.
+
+### Jenkins에서 실행 후 확인
+
+1. Job 한 번 실행 후 Console Output에서 `Build WAR` → `Docker Build & Push` 단계 성공 여부 확인.
+2. Registry에 이미지가 올라갔는지 확인:
+
+   ```bash
+   SERVER_IP=$(hostname -I | awk '{print $1}')
+   curl -s -u admin:admin123 "http://$SERVER_IP:5000/v2/h-cms/tags/list"
+   ```
+
+   또는 노드에서:
+
+   ```bash
+   docker pull $SERVER_IP:5000/h-cms:latest
+   ```
+
+3. 07번 5단계 Deployment의 `image`를 `$REGISTRY/h-cms:latest` 또는 `$REGISTRY/h-cms:$BUILD_NUMBER`로 두고 `kubectl apply` 후 Pod가 정상 기동하는지 확인.
+
+이렇게 하면 04번 Jenkins에서 07번과 동일한 Tomcat+WAR 이미지를 빌드·푸시하고, 07번의 Deployment·Service로 배포할 수 있습니다.
+
+---
+
 ## 4단계: 네임스페이스 및 imagePullSecrets (Private Registry 사용 시)
 
 Kubernetes에서 Private Registry 이미지를 pull하려면 시크릿이 필요합니다.
