Jenkins로 Tomcat WAR Kubernetes 배포 가이드 추가

--- a/kubeadm/07.tomcat-war-deploy.md
+++ b/kubeadm/07.tomcat-war-deploy.md
@@ -198,6 +198,8 @@ docker push $IMAGE
 
 ## 3단계 (대안): 04번 Jenkins에서 이미지 빌드하기
 
+> **Jenkins 설정부터 배포까지 전체 흐름**은 **08번 문서 [Jenkins로 Tomcat WAR Kubernetes 배포 가이드](08.jenkins-tomcat-deploy.md)**를 참고하세요. 플러그인·Credentials·Pipeline Job·kubectl 배포 단계까지 포함합니다.
+
 07번에서 사용하는 Tomcat+WAR 이미지를 **04번 문서의 Jenkins** 파이프라인에서 빌드·푸시하는 방법입니다. 소스에서 WAR 빌드 후 동일한 Dockerfile로 이미지를 만들어 Private Registry에 푸시합니다.
 
 ### 사전 조건
